--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,8 @@ project(":desktop") {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        
+
+        api "org.junit.jupiter:junit-jupiter-api:5.8.1"
     }
 }
 
